# OpenGL

./: CMakeLists.txt  Makefile  README.md  ReadMe.md  Readme.md  box.cpp  box.h  camera.cpp  camera.h  controls.cpp  controls.h  game.cpp  game.h  game.hpp  gameCube.cpp  gameCube.h  gameObject.cpp  gameObject.h  gamePlayer.cpp  gamePlayer.h  gameSphere.cpp  gameSphere.h  gameText.cpp  gameText.h  glfwMinimal.cpp  glfwMinimal.h  hud.cpp  hud.h  level.cpp  level.h  light.cpp  light.h  mesh.cpp  mesh.h  partLevel.cpp  partLevel.h  particle.cpp  particle.h  particles.cpp  particles.h  (+19 more)
Shading/: CMakeLists.txt  shading.cpp  shading.hpp
Textures/: CMakeLists.txt  textures.cpp  textures.hpp
data/: minimal.f.glsl  minimal.v.glsl  text2D.v.glsl  ubuntu_regular_24.TGA
editor/: RunnerEditor.pro  RunnerEditor.pro.user.18  editorwindow.cpp  editorwindow.h  imagewidget.cpp  imagewidget.h  main.cpp  resources.qrc
inc/: vertex.h
resources/: blank_normalmap.tga  bonus_score.blend  bonus_score.blend1  bonus_score.mtl  brick.tga  brick2.tga  brick_colormap.tga  brick_normalmap.tga  checkerboard.tga  checkerboard_normalmap.tga  chesterfield_aomap.tga  chesterfield_colormap.tga  chesterfield_dispmap.tga  chesterfield_normalmap.tga  chesterfield_specmap.tga  dice.tga  dice_normalmap.tga  illumination.f.glsl  illumination.v.glsl  landing_01_start.blend  landing_01_start.blend1  levels.txt  minimal.f.glsl  minimal.v.glsl  mockup.xcf  particle.f.glsl  particle.v.glsl  player.v.glsl  rainbowTexture.tga  road.blend  road.mtl  roat_texture.tga  roat_texture_256.tga  runner.dia  sky-back.tga  sky-front.tga  sky-left.tga  skybox.f.glsl  skybox.tga  skybox.v.glsl  (+24 more)
resources/character/: character.blend  character.blend1  character.blend2  landing_01_start.blend
resources/level/: level0.txt  level0.txt~  level1.txt  level2.txt  level3.txt  level4.txt
src/: CMakeLists.txt  main  main.cpp  vertex  vertex.cpp
utils/: objloader.cpp  shaders.cpp  tangentspace.cpp  textures.cpp  vboindexer.cpp  vboindexer.h
